--- a/consume.html
+++ b/consume.html
@@ -10,7 +10,13 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" href="../css/consume.css">
+    <link rel="stylesheet" href="../css/receipt.css">
     <script src="../js/consume.js"></script>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
     <title>리치메이커 : 소비챌린지</title>
 </head>
 
@@ -47,7 +53,7 @@
         <section>
             <div class="main-container">
                 <h1 style="font-weight: bold; font-size: larger; text-align: center;">소비 기록하기</h1>
-                <button type="submit" onclick="a"
+                <button type="button" data-bs-toggle="modal" data-bs-target="#aiModal"
                     style="border-radius:20px; float:right; margin:5px 15vw; padding:5px;">
                     영수증 정보 불러오기
                 </button>
@@ -113,6 +119,38 @@
             </div>
         </footer>
     </div>
+
+    <!-- 영수증 모달 -->
+    <div class="modal fade" id="aiModal" tabindex="-1" aria-labelledby="aiModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="right_box">
+                    <h1>AI 영수증 인식</h1>
+                    <div class="imgbox">
+                        <img id="preview" class="resized-img"
+                            src="https://png.pngtree.com/png-clipart/20220601/original/pngtree-printed-purchase-bill-receipt-paper-png-image_7828387.png" />
+                    </div>
+
+
+                    <div class="input-group">
+                        <input type="file" id="image" onchange="readURL(this);" class="form-control">
+                        <button type="button" id="aiCheck" onclick="btnCheckReceipt()">영수증 인식하기</button>
+                    </div>
+                    <div class="receipt-text"></div>
+                    <div class="button_group">
+                        <div class="button_box">
+                            <button type="button" class="btn btn-outline-secondary custom-button"
+                                onclick="EmailAuthentication()">확인</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- script -->
+    <script src="js/receipt.js"></script>
+
+    <!-- script end -->
 </body>
 
 </html>
