--- a/nav.html
+++ b/nav.html
@@ -1,10 +1,11 @@
-<div class="header_btn">
+<div class="header_btn" id="anonymous_view">
   <a href="signup.html">회원가입</a>
   <a href="login.html">로그인</a>
 </div>
-<!-- <div class="header_btn">
-            <a href="">로그아웃</a>
-        </div> -->
+<div class="header_btn" id="user_view">
+  <a href="#" id="logout_button" onclick="logout()">로그아웃</a>
+  <p id="tokneLifeTime"></p>
+</div>
 <h1>
   <a href="/"><img src="./img/richmaker-logo.png" alt="" /></a>
 </h1>
@@ -14,8 +15,9 @@
 </div>
 <div class="nav-drop-menu">
   <ul>
-    <li><a href="">나의 가계부</a></li>
-    <li><a href="">리치메이커 챌린지</a></li>
-    <li><a href="">마이페이지</a></li>
+    <li><a href="consume.html">소비 기록 하기</a></li>
+    <li><a href="list.html">리치메이커 챌린지</a></li>
+    <li><a href="mypage.html">마이페이지</a></li>
+    <li><a href="updateUserInfo.html">회원 정보 수정</a></li>
   </ul>
 </div>
