:lipstick:Design: index.html 간단한 디자인 수정

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
           </div>
           <hr class="bar">
-          <div>
+          <div class="rank-challenge">
             <div class="top-card-container">
               <div class="top-card">
                 <div class="top-card-image-container">
