--- a/consume.html
+++ b/consume.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" href="../css/consume.css">
     <link rel="stylesheet" href="../css/receipt.css">
-    <script src="../js/consume.js"></script>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -136,13 +135,13 @@
 
                     <div class="input-group">
                         <input type="file" id="image" onchange="readURL(this);" class="form-control">
-                        <button type="button" id="aiCheck" onclick="btnCheckReceipt()">영수증 인식하기</button>
+                        <button type="button" id="aiCheck">영수증 인식하기</button>
                     </div>
                     <div class="receipt-text"></div>
                     <div class="button_group">
                         <div class="button_box">
                             <button type="button" class="btn btn-outline-secondary custom-button"
-                                onclick="EmailAuthentication()">확인</button>
+                                id="btnAiAdd">확인</button>
                         </div>
                     </div>
                 </div>
@@ -150,6 +149,7 @@
         </div>
     </div>
     <!-- script -->
+    <script src="../js/consume.js"></script>
     <script src="js/receipt.js"></script>
 
     <!-- script end -->
