:sparkles:Feat:저축정보 불러오는 코드 살짝 변경

--- a/mypage.html
+++ b/mypage.html
@@ -220,9 +220,8 @@
             <div class="modal-body">
               <div class="input-group flex-nowrap">
                 <span class="input-group-text" id="addon-wrapping">날짜</span>
-                <input type="text" class="form-control" id="date-income"
-                  placeholder="YYYY-MM-DD 이렇게 입력해주세요. 아무것도 쓰지 않을 경우, 현재 날짜로 입력됩니다." aria-label="date"
-                  aria-describedby="addon-wrapping">
+                <input type="text" class="form-control" id="date-income" placeholder="YYYY-MM-DD 이렇게 입력해주세요."
+                  aria-label="date" aria-describedby="addon-wrapping">
               </div>
               <div class="input-group flex-nowrap">
                 <span class="input-group-text" id="addon-wrapping">수입</span>
@@ -250,9 +249,8 @@
             <div class="modal-body">
               <div class="input-group flex-nowrap">
                 <span class="input-group-text" id="addon-wrapping">날짜</span>
-                <input type="text" class="form-control" id="date-plus"
-                  placeholder="YYYY-MM-DD 이렇게 입력해주세요. 아무것도 쓰지 않을 경우, 현재 날짜로 입력됩니다." aria-label="date"
-                  aria-describedby="addon-wrapping">
+                <input type="text" class="form-control" id="date-plus" placeholder="YYYY-MM-DD 이렇게 입력해주세요."
+                  aria-label="date" aria-describedby="addon-wrapping">
               </div>
               <span class="challenge">챌린지 선택하기</span>
               <div class="challenge-sort" id="challenge-sort"></div>
