:sparkles:Feat: 메인 및 리스트 연결

--- a/list.html
+++ b/list.html
@@ -36,7 +36,7 @@
       <div class="main-container">
         <div class="main-report">
           <div class="main-nav">
-            <span>상위 챌린지 목록</span>
+            <span id="challenge-category"></span>
             <div class="button-cover">
               <a href="">영수증 인증하기</a>
               <a href="">이번달 소비 목록 확인</a>
