--- a/challenge-detail.html
+++ b/challenge-detail.html
@@ -36,12 +36,11 @@
                     <div>
                         <label for="formFileLg" class="form-label">대표이미지</label>
                     </div>
-                    <img src="https://cdn.vectorstock.com/i/1000x1000/08/68/dollar-icon-sign-seamless-pattern-on-a-gray-vector-11350868.webp"
-                        alt="">
+                    <img id="main_image" src="" alt="">
                     <div class="mb-3">
                         <label for="exampleFormControlInput1" class="form-label">챌린지명</label>
                         <input type="text" class="form-control form-control-lg" id="challenge_title"
-                            placeholder="챌린지명을 입력하세요." name="challenge_title">
+                            placeholder="챌린지명을 입력하세요." name="challenge_title" disabled readonly>
                     </div>
                     <!-- <input class="form-control" type="text" placeholder="챌린지명을 입력하세요." aria-label="default input example"> -->
                     <label for="exampleFormControlInput1" class="form-label">챌린지 소개</label>
@@ -50,12 +49,12 @@
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">목표금액(만원)</label>
                             <input type="text" class="form-control form-control-lg" id="amount" placeholder="숫자만 입력하세요."
-                                name="amount">
+                                name="amount" disabled readonly>
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">기간(개월)</label>
                             <input type="text" class="form-control form-control-lg" id="period" placeholder="숫자만 입력하세요."
-                                name="period">
+                                name="period" disabled readonly>
                         </div>
                     </div>
                 </div>
@@ -76,11 +75,14 @@
 
     <!-- script -->
     <script>
-        $(document).ready(function () {
-            $('#summernote').summernote();
-        });
+        $('#summernote').summernote('disable');
+        function handleEditPost() {
+            $("input").removeAttr('disabled readonly');
+            $('#summernote').summernote('enable');
+            $('.btn-dark').text('챌린지저장')
+        }
     </script>
-    <script src="js/conf.js"></script>
+    <script src="js/conf.js" type="module"></script>
     <script src="js/nav.js"></script>
     <script src="js/challenge-detail.js"></script>
     <!-- script end -->
