--- a/mypage.html
+++ b/mypage.html
@@ -82,11 +82,11 @@
                 </div>
               </div>
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                <h5 class="card-title" id="bookmark-title">Card title</h5>
+                <p class="card-text" id= "bookmark-content">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
               </div>
-              <div class="card-footer">
+              <div class="card-footer" id="bookmark-money">
                 <small class="text-body-secondary">목표 금액</small>
               </div>
             </div>
