:hammer:Refact: update signup,user info css

--- a/updateUserInfo.html
+++ b/updateUserInfo.html
@@ -77,6 +77,12 @@
     <footer>
         <!-- footer 삽입 -->
     </footer>
+    <script>
+        function handleBtn() {
+            document.querySelector(".nav-drop-menu").classList.toggle("on");
+            document.querySelector(".menu_btn").classList.toggle("on");
+        }
+    </script>
     <script type="module" src="/js/conf.js"></script>
     <script type="module" src="/js/updateUserInfo.js"></script>
     <script src="js/nav.js" type="module"></script>
