--- a/login.html
+++ b/login.html
@@ -63,22 +63,29 @@
           <div class="mb-3 row">
             <label for="password" class="col-sm-2 col-form-label">Password:</label>
             <div class="col-sm-10">
+
               <input type="password" class="form-control custom_box" id="password" placeholder="비밀번호를 입력해 주세요.">
             </div>
           </div>
         </div>
         <div id="button_group">
-          <div id="inner_btnBox">
-            <div class="button_box" id="login_button">
-              <a href="#" id="login_button"
-                class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">로그인하기</a>
+          <div>
+            <a href="#" id="socialaccount_google">구글 계정으로 로그인</a>
+          </div>
+          <div>
+            <div id="inner_btnBox">
+              <div class="button_box" id="login_button">
+                <a href="#" id="login_button"
+                  class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">로그인하기</a>
+              </div>
+              <div class="button_box">
+                <a href="/updateUserInfo.html">비밀번호 찾기</a>
+              </div>
+              <div class="button_box">
+                <a href="/updateUserInfo.html">휴면 계정 활성화 신청</a>
+              </div>
             </div>
-            <div class="button_box">
-              <a href="/updateUserInfo.html">비밀번호 찾기</a>
-            </div>
-            <div class="button_box">
-              <a href="/updateUserInfo.html">휴면 계정 활성화 신청</a>
-            </div>
+
           </div>
         </div>
       </div>
@@ -88,6 +95,12 @@
   <footer>
     <!-- footer 삽입 -->
   </footer>
+  <script>
+    function handleBtn() {
+      document.querySelector(".nav-drop-menu").classList.toggle("on");
+      document.querySelector(".menu_btn").classList.toggle("on");
+    }
+  </script>
   <script type="module" src="/js/api.js"></script>
   <script type="module" src="/js/login.js"></script>
   <!-- script -->
