--- a/consumeedit.html
+++ b/consumeedit.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/module.css">
     <script src="js/nav.js"></script>
     <link rel="stylesheet" href="js/index.js">
-    <script src="../js/consume.js"></script>
+    <script src="../js/consumeedit.js"></script>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
