--- a/mypage.html
+++ b/mypage.html
@@ -159,15 +159,21 @@
         <div class="card" style="width: 80rem; ">
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              <button type="button" class="incomebutton" data-bs-toggle="modal" data-bs-target="#staticBackdrop">수입
-                기록하기</button>
+              <div class="button-box" style="float:right;">
+                <button type="button" class="incomebutton" data-bs-toggle="modal" data-bs-target="#staticBackdrop">수입
+                  기록하기</button>
+                <button type="button" class="incomebutton" data-bs-toggle="modal" data-bs-target="#staticBackdrop3">수입
+                  수정하기</button>
+                <button type="button" class="incomebutton" data-bs-toggle="modal" data-bs-target="#staticBackdrop4">수입
+                  삭제하기</button>
+              </div>
               <div style="display:inline-flex">
-                <div class="card" id="income-today" style="width:370px; border-radius:10px;">
+                <div class="card" id="income-today" style="width:385px; border-radius:10px;">
                   <button style="font-size:20px;">오늘의 수입</button>
                   <div id="income-box" style="display:inline-block;"></div>
                   <div id="total-income"></div>
                 </div>
-                <div class="card" id="income-choice" style="width:370px; border-radius:10px; float:right;">
+                <div class="card" id="income-choice" style="width:385px; border-radius:10px; float:right;">
                   <button style="font-size:20px;">선택한 날짜의 수입</button>
                   <span id="income-box-choice"></span>
                   <div id="total-income-choice"></div>
@@ -175,14 +181,17 @@
               </div>
             </li>
             <li class="list-group-item">
-              <button class=" consumebutton" onclick="location.href='consume.html'">지출 기록하기</button>
+              <div class="button-box" style="float:right;">
+                <button class=" consumebutton" onclick="location.href='consume.html'">지출 기록하기</button>
+                <button class=" consumebutton" onclick="location.href='consumedetail.html'">지출 자세히보기</button>
+              </div>
               <div style="display:inline-flex">
-                <div class="card" id="minus-today" style="width:370px; border-radius:10px;">
+                <div class="card" id="minus-today" style="width:385px; border-radius:10px;">
                   <button style="font-size:20px;">오늘의 지출액</button>
                   <div id="minus-box" style="display:inline-block;"></div>
                   <div id="total-minus"></div>
                 </div>
-                <div class="card" id="minus-choice" style="width:370px; border-radius:10px; float:right;">
+                <div class="card" id="minus-choice" style="width:385px; border-radius:10px; float:right;">
                   <button style="font-size:20px;">선택한 날짜의 지출액</button>
                   <span id="minus-box-choice"></span>
                   <div id="total-minus-choice"></div>
@@ -190,15 +199,21 @@
               </div>
             </li>
             <li class="list-group-item">
-              <button type="button" class="incomebutton" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">저축
-                하러가기</button>
+              <div class="button-box" style="float:right;">
+                <button type="button" class="banksavebutton" data-bs-toggle="modal"
+                  data-bs-target="#staticBackdrop2">저축하러가기</button>
+                <button type="button" class="banksavebutton" data-bs-toggle="modal" data-bs-target="#staticBackdrop5">저축
+                  수정하기</button>
+                <button type="button" class="banksavebutton" data-bs-toggle="modal" data-bs-target="#staticBackdrop6">저축
+                  삭제하기</button>
+              </div>
               <div style="display:inline-flex">
-                <div class="card" id="plus-today" style="width:370px; border-radius:10px;">
+                <div class="card" id="plus-today" style="width:385px; border-radius:10px;">
                   <button style="font-size:20px;">오늘의 저축</button>
                   <div id="plus-box" style="display:inline-block;"></div>
                   <div id="total-plus"></div>
                 </div>
-                <div class="card" id="plus-choice" style="width:370px; border-radius:10px; float:right;">
+                <div class="card" id="plus-choice" style="width:385px; border-radius:10px; float:right;">
                   <button style="font-size:20px;">선택한 날짜의 저축</button>
                   <span id="plus-box-choice"></span>
                   <div id="total-plus-choice"></div>
@@ -238,6 +253,60 @@
       </div>
       <!--끝-->
       <!--모달창 시작-->
+      <div class="modal fade" id="staticBackdrop3" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">수입 수정하기</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="input-group flex-nowrap">
+                <span class="input-group-text" id="addon-wrapping">날짜</span>
+                <input type="text" class="form-control" id="date-income2" placeholder="YYYY-MM-DD 이렇게 입력해주세요."
+                  aria-label="date" aria-describedby="addon-wrapping">
+              </div>
+              <div class="input-group flex-nowrap">
+                <span class="input-group-text" id="addon-wrapping">수입</span>
+                <input type="text" class="form-control" id="income_money2" placeholder="수입을 입력해주세요." aria-label="income"
+                  aria-describedby="addon-wrapping">
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" onclick="handleIncomeUpdate()">수정</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--끝-->
+      <!--모달창 시작-->
+      <div class="modal fade" id="staticBackdrop4" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">수입 삭제하기</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="input-group flex-nowrap">
+                <span class="input-group-text" id="addon-wrapping">날짜</span>
+                <input type="text" class="form-control" id="date-income3"
+                  placeholder="삭제하고자 하는 수입의 날짜를 입력해주세요. YYYY-MM-DD 이렇게 입력해주세요." aria-label="date"
+                  aria-describedby="addon-wrapping">
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" onclick="handleIncomeDelete()">삭제</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--끝-->
+      <!--모달창 시작-->
       <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -252,17 +321,75 @@
                 <input type="text" class="form-control" id="date-plus" placeholder="YYYY-MM-DD 이렇게 입력해주세요."
                   aria-label="date" aria-describedby="addon-wrapping">
               </div>
-              <span class="challenge">챌린지 선택하기</span>
+              <p class="challenge" style="margin-top:10px;">챌린지 선택하기</p>
               <div class="challenge-sort" id="challenge-sort"></div>
               <div class="input-group flex-nowrap">
                 <span class="input-group-text" id="addon-wrapping">저축금액</span>
-                <input type="text" class="form-control" placeholder="수입을 입력해주세요." aria-label="income" id="plus_money"
+                <input type="text" class="form-control" placeholder="저축금액을 입력해주세요." aria-label="income" id="plus_money"
                   aria-describedby="addon-wrapping">
               </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
               <button type="button" class="btn btn-primary" onclick="handleSaving()">작성</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--끝-->
+      <!--모달창 시작-->
+      <div class="modal fade" id="staticBackdrop5" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">저축 수정하기</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="input-group flex-nowrap">
+                <span class="input-group-text" id="addon-wrapping">날짜</span>
+                <input type="text" class="form-control" id="date-plus2" placeholder="YYYY-MM-DD 이렇게 입력해주세요."
+                  aria-label="date" aria-describedby="addon-wrapping">
+              </div>
+              <p class="challenge" style="margin-top:10px;">챌린지 선택하기</p>
+              <div class="challenge-sort" id="challenge-sort2"></div>
+              <div class="input-group flex-nowrap">
+                <span class="input-group-text" id="addon-wrapping">저축금액</span>
+                <input type="text" class="form-control" placeholder="저축금액을 입력해주세요." aria-label="income" id="plus_money2"
+                  aria-describedby="addon-wrapping">
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" onclick="handleSavingUpdate()">수정</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--끝-->
+      <!--모달창 시작-->
+      <div class="modal fade" id="staticBackdrop6" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">저축 삭제하기</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="input-group flex-nowrap">
+                <span class="input-group-text" id="addon-wrapping">날짜</span>
+                <input type="text" class="form-control" id="date-plus3"
+                  placeholder="삭제하고자 하는 날짜를 입력해주세요. YYYY-MM-DD 이렇게 입력해주세요." aria-label="date"
+                  aria-describedby="addon-wrapping">
+              </div>
+              <p class="challenge" style="margin-top: 10px;">챌린지 선택하기</p>
+              <div class="challenge-sort" id="challenge-sort3"></div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" onclick="handleSavingDelete()">삭제</button>
             </div>
           </div>
         </div>
