:hammer:Refact: update user info css

--- a/mypage.html
+++ b/mypage.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="./css/index2.css" />
   <link rel="stylesheet" href="css/module.css">
   <link rel="stylesheet" href="./css/mypage.css" />
-<!-- 여기에 스크립트 선언되면 변수가 안 불러짐  -->
+  <!-- 여기에 스크립트 선언되면 변수가 안 불러짐  -->
   <title>리치메이커 : 소비챌린지</title>
 </head>
 
@@ -50,14 +50,14 @@
             </div>
           </div>
           <div class="numbers">
-            <button type="button" class="update">이미지 편집</button>
+            <button type="button" class="update" id="updateUserProfileButton">이미지 편집</button>
             <p>Email: <span id="user-email"></span></p>
 
             <!-- <div class="item">
               email@example.com
             </div> -->
             <p>Username: <span id="user-name"></span></p>
-            
+
             <!-- <div class="item">
               username
             </div> -->
@@ -83,7 +83,8 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title" id="bookmark-title">Card title</h5>
-                <p class="card-text" id= "bookmark-content">This is a wider card with supporting text below as a natural lead-in to additional
+                <p class="card-text" id="bookmark-content">This is a wider card with supporting text below as a natural
+                  lead-in to additional
                   content. This content is a little bit longer.</p>
               </div>
               <div class="card-footer" id="bookmark-money">
