:bug:Fix: 지출 버그 수정

--- a/consume.html
+++ b/consume.html
@@ -116,13 +116,13 @@
     <footer>
     </footer>
     <!-- script -->
-    <script src="js/receipt.js" type="module"></script>
     <script>
         function handleBtn() {
             document.querySelector(".nav-drop-menu").classList.toggle("on");
             document.querySelector(".menu_btn").classList.toggle("on");
         }
     </script>
+    <script src="js/receipt.js"></script>
     <script src="js/nav.js" type="module"></script>
     <script type="module" src="/js/api.js"></script>
     <!-- script end -->
