:sparkles:Feat: 북마크,라이크 챌린지 마이페이지에서 목록 보여주기 추가

--- a/mypage.html
+++ b/mypage.html
@@ -74,7 +74,7 @@
         <p>내 챌린지 관리</p>
         <hr class="line">
         <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="col">
+          <!-- <div class="col" id="bookmark_box">
             <div class="card h-100" style="border-radius: 10px;">
               <div class="imagebox">
                 <div class="box" style="background: rgba(231, 57, 34, 0.322);">
@@ -91,10 +91,13 @@
                 <small class="text-body-secondary">목표 금액</small>
               </div>
             </div>
-          </div>
+          </div> -->
+          <div class="slider">
 
+          </div>
         </div>
       </div>
+
       <!-- 좋아요 누른 첼린지 -->
       <div class="myinterestingchallenge">
         <p class="myinteresting">관심있는 챌린지</p>
