--- a/list.html
+++ b/list.html
@@ -38,9 +38,7 @@
           <div class="main-nav">
             <span id="challenge-category"></span>
             <div class="button-cover">
-              <a href="">영수증 인증하기</a>
-              <a href="">이번달 소비 목록 확인</a>
-              <a href="">이번달 수입 기록</a>
+              <a href="/consume.html">영수증 AI인식</a>
             </div>
           </div>
           <hr class="bar" />
