--- a/mypage.html
+++ b/mypage.html
@@ -409,6 +409,7 @@
     }
   </script>
   <script src="js/nav.js" type="module"></script>
+  <script type="module" src="/js/conf.js"></script>
   <script type="module" src="/js/api.js"></script>
   <script type="module" src="/js/mypage.js"></script>
 
