--- a/consumedetail.html
+++ b/consumedetail.html
@@ -12,15 +12,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" href="../css/consumedetail.css">
     <link rel="stylesheet" href="css/module.css">
-    <script src="js/nav.js"></script>
     <link rel="stylesheet" href="js/index.js">
-    <script src="../js/consumedetail.js"></script>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -74,23 +71,26 @@
                         <div style="width: 80rem; display:flex; flex-direction:row;">
                             <div class="card"
                                 style="width:385px; border-radius:10px; display:flex; flex-direction:row;">
-                                <h3 style="font-size:20px;">오늘의 지출액</h3>
+                                <h3 style="font-size:20px; padding:10px;">오늘의 지출액</h3>
                             </div>
                             <div class="card" id="minus-today"
                                 style="width:385px; border-radius:10px; display:flex; flex-direction:row;">
-                                <h3 style="font-size:20px;">선택한 날짜의 지출액</h3>
+                                <h3 style="font-size:20px; padding:10px;">선택한 날짜의 지출액</h3>
                             </div>
                         </div>
                         <div style="width: 80rem; display:flex; flex-direction:row;">
-                            <ul class="card" id="minus-today"
+                            <ul id="minus-today"
                                 style="width:385px; border-radius:10px; display:flex; flex-direction:row;">
-                                <li style="font-size:20px;" id="minus-box"></li>
+                                <li style="font-size:15px; text-align:center;" id="minus-box"></li>
                             </ul>
-                            <ul class="card" id="minus-today"
+                            <ul id="minus-today"
                                 style="width:385px; border-radius:10px; display:flex; flex-direction:row;">
-                                <li style="font-size:20px;" id="minus-box2"></li>
+                                <li style="font-size:15px; text-align:center;" id="minus-box2"></li>
                             </ul>
                         </div>
+                    </div>
+                    <div style="padding:20px;">
+                        <button type="button" id="mypage" class="consumebutton">마이페이지로 가기</button>
                     </div>
                 </div>
             </div>
@@ -107,7 +107,9 @@
         }
     </script>
     <script src="js/nav.js" type="module"></script>
+    <script type="module" src="/js/conf.js"></script>
     <script type="module" src="/js/api.js"></script>
+    <script type="module" src="/js/consumedetail.js"></script>
     <!-- script end -->
 </body>
 
