--- a/consumeedit.html
+++ b/consumeedit.html
@@ -5,16 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" href="../css/consume.css">
     <link rel="stylesheet" href="../css/receipt.css">
     <link rel="stylesheet" href="css/module.css">
-    <script src="js/nav.js"></script>
     <link rel="stylesheet" href="js/index.js">
-    <script src="../js/consumeedit.js"></script>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -32,12 +29,11 @@
     </header>
     <section>
         <div class="main-container">
-            <h1 style="font-weight: bold; font-size: larger; text-align: center;">소비 기록하기</h1>
-            <button type="button" data-bs-toggle="modal" data-bs-target="#aiModal"
-                style="border-radius:20px; float:right; margin:5px 15vw; padding:5px;">
-                영수증 정보 불러오기
-            </button>
+            <h1 style="font-weight: bold; font-size: larger; text-align: center;">소비기록 수정하기</h1>
             <div class="card">
+                <div class="consume-info">
+                    <p id="date" style="margin-bottom:20px;">수정 전 날짜 </p>
+                </div>
                 <h3 style="margin-bottom:20px; text-align:center; font-weight: bold;"> 날짜 선택하기 </h3>
                 <div class="calendar-section">
                     <table class="Calendar">
@@ -81,50 +77,24 @@
                     <p id="cost">지출 금액 단가 </p>
                 </div>
                 <div style="padding:20px;">
-                    <button type="button" class="consumebutton" onclick="handlePost()">저장</button>
+                    <button type="button" class="consumebutton" id="modify">수정완료</button>
                     <button type="button" class="consumebutton" onclick="history.back()">뒤로가기</button>
                 </div>
             </div>
     </section>
-    <!-- 영수증 모달 -->
-    <div class="modal fade" id="aiModal" tabindex="-1" aria-labelledby="aiModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="right_box">
-                    <h1>AI 영수증 인식</h1>
-                    <div class="imgbox">
-                        <img id="preview" class="resized-img"
-                            src="https://png.pngtree.com/png-clipart/20220601/original/pngtree-printed-purchase-bill-receipt-paper-png-image_7828387.png" />
-                    </div>
-
-
-                    <div class="input-group">
-                        <input type="file" id="image" onchange="readURL(this);" class="form-control">
-                        <button type="button" id="aiCheck" onclick="btnCheckReceipt()">영수증 인식하기</button>
-                    </div>
-                    <div class="receipt-text"></div>
-                    <div class="button_group">
-                        <div class="button_box">
-                            <button type="button" class="btn btn-outline-secondary custom-button"
-                                onclick="EmailAuthentication()">확인</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <footer>
     </footer>
     <!-- script -->
-    <script src="js/receipt.js" type="module"></script>
     <script>
         function handleBtn() {
             document.querySelector(".nav-drop-menu").classList.toggle("on");
             document.querySelector(".menu_btn").classList.toggle("on");
         }
     </script>
-    <script src="js/nav.js" type="module"></script>
     <script type="module" src="/js/api.js"></script>
+    <script src="js/nav.js" type="module"></script>
+    <script type="module" src="/js/conf.js"></script>
+    <script type="module" src="/js/consumeedit.js"></script>
     <!-- script end -->
 </body>
 
